--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ engine/source/codegen/jsbinding.gen.cpp
 engine/source/codegen/parser.out
 engine/source/codegen/parsetab.py
 temp
+engine/source/bin
