--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ engine/source/codegen/parser.out
 engine/source/codegen/parsetab.py
 temp
 engine/source/bin
+engine/source/tools/shaderlab/parsetab.py
